objects/SpringCMEos__SpringCM_Attribute_Field__c.object
<CustomObject>
    <fields>
        <fullName>SpringCMEos__DataType__c</fullName>
        <label>DataType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>String</fullName>
                    <default>true</default>
                    <label>String</label>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>DropDown</fullName>
                </value>
                <value>
                    <fullName>Decimal</fullName>
                </value>
                <value>
                    <fullName>MagicDropDown</fullName>
                </value>
                <value>
                    <fullName>Cascade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SpringCMEos__Field__c</fullName>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpringCMEos__Group__c</fullName>
        <label>Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpringCMEos__Max_Value__c</fullName>
        <label>Max Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpringCMEos__Min_Value__c</fullName>
        <label>Min Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpringCMEos__SpringCM_Attribute_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SpringCM Attribute Group</label>
        <referenceTo>SpringCMEos__SpringCM_Attribute_Group__c</referenceTo>
        <relationshipLabel>SpringCM Attribute Fields</relationshipLabel>
        <relationshipName>SpringCM_Attribute_Fields</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SpringCMEos__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SpringCM Attribute Field</label>
    <nameField>
        <displayFormat>SCM-{00000}</displayFormat>
        <label>SpringCM Attribute Field Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SpringCM Attribute Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>